--- a/app/views/series/_form.html.erb
+++ b/app/views/series/_form.html.erb
@@ -1,13 +1,16 @@
 <%= form_for(@series) do |f| %>
   <% if @series.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@series.errors.count, "error") %> prohibited this series from being saved:</h2>
-
-      <ul>
-      <% @series.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@series.errors.count, "error") %> prohibited this series from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @series.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
