Clean up some styles. Change function name to something that better explains what the helper function is meant to do.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
         <hr>
 
         <footer>
-          <p>&copy; LG 2012</p>
+          <p>&copy; JEL 2014</p>
         </footer>
 
       </div><!--/.fluid-container-->
