Initial work to create content

--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -12,5 +12,7 @@
   <%= @series.description %>
 </p>
 
+<%= render template:'content/index' %>
+
 <%= link_to 'Edit', edit_series_path(@series) %> |
 <%= link_to 'Back', series_index_path %>
